# tapyrus

./: Makefile  README.md  pyproject.toml  setup.py
src/tapyrus/: cmd.py  defaults.py  documents.py  exceptions.py  parsers.py  servers.py
src/tapyrus/tests/: example_handlers.py  fixtures.py  test_document.py  test_parsers.py  test_servers.py
src/tapyrus/tests/resources/: example.yaml
