[tool.poetry]
name = "Tapyrus"
version = "0.1.0"
description = ""
authors = ["Rigel <zedr@zedr.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.black]
line-length = 79
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
